--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "sort-multidimensional-array-func": "^1.0.1"
   },
   "scripts": {
